--- a/NWN.2daPatchTool.csproj
+++ b/NWN.2daPatchTool.csproj
@@ -9,6 +9,7 @@
         <RuntimeIdentifier>win-x64</RuntimeIdentifier>
         <PublishTrimmed>true</PublishTrimmed>
         <PublishReadyToRun>true</PublishReadyToRun>
+        <RootNamespace>TwoDimArrayPatchTool</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
